--- a/Section-5-Testing-Web-Applications/24-creating-simple-web-application/templates/home.page.gohtml
+++ b/Section-5-Testing-Web-Applications/24-creating-simple-web-application/templates/home.page.gohtml
@@ -1,15 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
+{{template "base" .}}
+
+{{define "content"}}
     <div class="container">
         <div class="row">
             <div class="col">
@@ -28,8 +19,9 @@
                 </form>
                 <hr>
                 <small>Your request came from {{.IP}}</small>
+                <br>
+                <small>From session: {{index .Data "test"}}</small>
             </div>
         </div>
     </div>
-</body>
-</html>
+{{end}}
